--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@angular/platform-browser": "^14.2.9",
     "@angular/platform-browser-dynamic": "^14.2.9",
     "@angular/router": "^14.2.0",
+    "@capacitor/android": "^4.6.1",
+    "@capacitor/core": "^4.6.1",
     "@fortawesome/fontawesome-free": "^6.2.0",
     "@ng-bootstrap/ng-bootstrap": "^13.1.0",
     "@popperjs/core": "^2.11.6",
@@ -34,6 +36,7 @@
     "@angular-devkit/build-angular": "^14.2.6",
     "@angular/cli": "~14.2.6",
     "@angular/compiler-cli": "^14.2.0",
+    "@capacitor/cli": "^4.6.1",
     "@tailwindcss/forms": "^0.5.3",
     "@types/jasmine": "~4.0.0",
     "@types/jquery": "^3.5.14",
